src/objects/PromoContactAssociation__c.object
<CustomObject>
    <description>Junction object to relate contacts to promotional items.</description>
    <fields>
        <fullName>Contact_Cost__c</fullName>
        <description>Cost of an individual item that can be sent.</description>
        <label>Contact Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Promotional Items Sent</relationshipLabel>
        <relationshipName>PromoContactAssociations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Promo__c</fullName>
        <label>Promo</label>
        <referenceTo>promo__c</referenceTo>
        <relationshipLabel>PromoContactAssociations</relationshipLabel>
        <relationshipName>PromoContactAssociations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was the item sent to the contact?</description>
        <inlineHelpText>Was the item sent to the contact?</inlineHelpText>
        <label>Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sizing__c</fullName>
        <description>Describe the size of the particular item sent or any customizations.</description>
        <label>Sizing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Units_Given__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of units given to a particular contact</description>
        <inlineHelpText>Number of units given to a particular contact</inlineHelpText>
        <label>Units Given</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PromoContactAssociation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Promo__c</columns>
        <columns>Sizing__c</columns>
        <columns>Units_Given__c</columns>
        <columns>Contact_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PROMO-{0000}</displayFormat>
        <label>PromoContactAssociation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PromoContactAssociations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>